--- a/backend/package.json
+++ b/backend/package.json
@@ -13,9 +13,10 @@
     "@babel/core": "^7.8.3",
     "@babel/node": "^7.8.3",
     "@babel/preset-env": "^7.8.3",
-    "body-parser": "^1.19.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-list-endpoints": "^5.0.0",
     "mongoose": "^5.8.10",
     "nodemon": "^2.0.2"
   },
