--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -57,7 +57,7 @@
     "no-irregular-whitespace": "error",
     "no-trailing-spaces": "off",
     "no-multiple-empty-lines": [
-      "error",
+      "off",
       {
         "max": 1
       }
@@ -76,6 +76,9 @@
       }
     ],
     "prefer-template": "error",
-    "semi": "off"
+    "semi": "off",
+    "linebreak-style": 0,
+    "max-len": "off",
+    "no-unused-vars": "off"
   }
 }
