--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.3.0",
+    "react-select": "^4.3.1",
     "styled-components": "^5.3.0"
   },
   "scripts": {
