--- a/backend/package.json
+++ b/backend/package.json
@@ -14,10 +14,14 @@
     "@babel/node": "^7.8.3",
     "@babel/preset-env": "^7.8.3",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.26.0",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-list-endpoints": "^5.0.0",
     "mongoose": "^5.8.10",
+    "multer": "^1.4.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemon": "^2.0.2"
   },
   "devDependencies": {
